--- a/fall-2022/day4/exercises/challenge-solution-f1-score.ipynb
+++ b/fall-2022/day4/exercises/challenge-solution-f1-score.ipynb
@@ -160,7 +160,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 28,
+   "id": "5cc30cb9",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'normal'"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y_test[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "fb37d538",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'RT @paytons_hawtmom: I knew that girl was fucking Sierra husband &#128514;&#128514;&#128514; #LHHATL'"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X_train[0]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
    "id": "8ec6ba91",
    "metadata": {},
    "outputs": [
@@ -168,103 +210,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Fitting 2 folds for each of 24 candidates, totalling 48 fits\n",
-      "[CV 1/2; 1/24] START classifier__C=0.01, vectorizer__max_df=0.5, vectorizer__min_df=0, vectorizer__ngram_range=(1, 1)\n",
-      "[CV 2/2; 1/24] START classifier__C=0.01, vectorizer__max_df=0.5, vectorizer__min_df=0, vectorizer__ngram_range=(1, 1)\n",
-      "[CV 1/2; 2/24] START classifier__C=0.01, vectorizer__max_df=0.5, vectorizer__min_df=0, vectorizer__ngram_range=(1, 2)\n",
-      "[CV 2/2; 2/24] START classifier__C=0.01, vectorizer__max_df=0.5, vectorizer__min_df=0, vectorizer__ngram_range=(1, 2)\n",
-      "[CV 1/2; 3/24] START classifier__C=0.01, vectorizer__max_df=0.5, vectorizer__min_df=5, vectorizer__ngram_range=(1, 1)\n",
-      "[CV 2/2; 3/24] START classifier__C=0.01, vectorizer__max_df=0.5, vectorizer__min_df=5, vectorizer__ngram_range=(1, 1)\n",
-      "[CV 1/2; 4/24] START classifier__C=0.01, vectorizer__max_df=0.5, vectorizer__min_df=5, vectorizer__ngram_range=(1, 2)\n",
-      "[CV 2/2; 4/24] START classifier__C=0.01, vectorizer__max_df=0.5, vectorizer__min_df=5, vectorizer__ngram_range=(1, 2)\n",
-      "[CV 1/2; 3/24] END classifier__C=0.01, vectorizer__max_df=0.5, vectorizer__min_df=5, vectorizer__ngram_range=(1, 1);, score=0.352 total time=   4.1s\n",
-      "[CV 2/2; 3/24] END classifier__C=0.01, vectorizer__max_df=0.5, vectorizer__min_df=5, vectorizer__ngram_range=(1, 1);, score=0.350 total time=   4.1s\n",
-      "[CV 1/2; 5/24] START classifier__C=0.01, vectorizer__max_df=1.0, vectorizer__min_df=0, vectorizer__ngram_range=(1, 1)\n",
-      "[CV 2/2; 5/24] START classifier__C=0.01, vectorizer__max_df=1.0, vectorizer__min_df=0, vectorizer__ngram_range=(1, 1)\n",
-      "[CV 1/2; 1/24] END classifier__C=0.01, vectorizer__max_df=0.5, vectorizer__min_df=0, vectorizer__ngram_range=(1, 1);, score=0.336 total time=   4.9s\n",
-      "[CV 2/2; 1/24] END classifier__C=0.01, vectorizer__max_df=0.5, vectorizer__min_df=0, vectorizer__ngram_range=(1, 1);, score=0.334 total time=   5.0s\n",
-      "[CV 1/2; 6/24] START classifier__C=0.01, vectorizer__max_df=1.0, vectorizer__min_df=0, vectorizer__ngram_range=(1, 2)\n",
-      "[CV 2/2; 6/24] START classifier__C=0.01, vectorizer__max_df=1.0, vectorizer__min_df=0, vectorizer__ngram_range=(1, 2)\n",
-      "[CV 1/2; 4/24] END classifier__C=0.01, vectorizer__max_df=0.5, vectorizer__min_df=5, vectorizer__ngram_range=(1, 2);, score=0.287 total time=   7.8s\n",
-      "[CV 2/2; 4/24] END classifier__C=0.01, vectorizer__max_df=0.5, vectorizer__min_df=5, vectorizer__ngram_range=(1, 2);, score=0.289 total time=   7.8s\n",
-      "[CV 1/2; 7/24] START classifier__C=0.01, vectorizer__max_df=1.0, vectorizer__min_df=5, vectorizer__ngram_range=(1, 1)\n",
-      "[CV 2/2; 7/24] START classifier__C=0.01, vectorizer__max_df=1.0, vectorizer__min_df=5, vectorizer__ngram_range=(1, 1)\n",
-      "[CV 1/2; 5/24] END classifier__C=0.01, vectorizer__max_df=1.0, vectorizer__min_df=0, vectorizer__ngram_range=(1, 1);, score=0.338 total time=   4.9s\n",
-      "[CV 1/2; 8/24] START classifier__C=0.01, vectorizer__max_df=1.0, vectorizer__min_df=5, vectorizer__ngram_range=(1, 2)\n",
-      "[CV 2/2; 5/24] END classifier__C=0.01, vectorizer__max_df=1.0, vectorizer__min_df=0, vectorizer__ngram_range=(1, 1);, score=0.337 total time=   4.9s\n",
-      "[CV 2/2; 8/24] START classifier__C=0.01, vectorizer__max_df=1.0, vectorizer__min_df=5, vectorizer__ngram_range=(1, 2)\n",
-      "[CV 1/2; 2/24] END classifier__C=0.01, vectorizer__max_df=0.5, vectorizer__min_df=0, vectorizer__ngram_range=(1, 2);, score=0.216 total time=  11.8s\n",
-      "[CV 2/2; 2/24] END classifier__C=0.01, vectorizer__max_df=0.5, vectorizer__min_df=0, vectorizer__ngram_range=(1, 2);, score=0.215 total time=  11.9s\n",
-      "[CV 1/2; 9/24] START classifier__C=1, vectorizer__max_df=0.5, vectorizer__min_df=0, vectorizer__ngram_range=(1, 1)\n",
-      "[CV 2/2; 9/24] START classifier__C=1, vectorizer__max_df=0.5, vectorizer__min_df=0, vectorizer__ngram_range=(1, 1)\n",
-      "[CV 1/2; 7/24] END classifier__C=0.01, vectorizer__max_df=1.0, vectorizer__min_df=5, vectorizer__ngram_range=(1, 1);, score=0.359 total time=   4.3s\n",
-      "[CV 2/2; 7/24] END classifier__C=0.01, vectorizer__max_df=1.0, vectorizer__min_df=5, vectorizer__ngram_range=(1, 1);, score=0.358 total time=   4.2s\n",
-      "[CV 1/2; 10/24] START classifier__C=1, vectorizer__max_df=0.5, vectorizer__min_df=0, vectorizer__ngram_range=(1, 2)\n",
-      "[CV 2/2; 10/24] START classifier__C=1, vectorizer__max_df=0.5, vectorizer__min_df=0, vectorizer__ngram_range=(1, 2)\n",
-      "[CV 1/2; 6/24] END classifier__C=0.01, vectorizer__max_df=1.0, vectorizer__min_df=0, vectorizer__ngram_range=(1, 2);, score=0.215 total time=  12.2s\n",
-      "[CV 1/2; 11/24] START classifier__C=1, vectorizer__max_df=0.5, vectorizer__min_df=5, vectorizer__ngram_range=(1, 1)\n",
-      "[CV 2/2; 6/24] END classifier__C=0.01, vectorizer__max_df=1.0, vectorizer__min_df=0, vectorizer__ngram_range=(1, 2);, score=0.213 total time=  12.2s\n",
-      "[CV 2/2; 11/24] START classifier__C=1, vectorizer__max_df=0.5, vectorizer__min_df=5, vectorizer__ngram_range=(1, 1)\n",
-      "[CV 1/2; 8/24] END classifier__C=0.01, vectorizer__max_df=1.0, vectorizer__min_df=5, vectorizer__ngram_range=(1, 2);, score=0.296 total time=   8.4s\n",
-      "[CV 1/2; 12/24] START classifier__C=1, vectorizer__max_df=0.5, vectorizer__min_df=5, vectorizer__ngram_range=(1, 2)\n",
-      "[CV 2/2; 8/24] END classifier__C=0.01, vectorizer__max_df=1.0, vectorizer__min_df=5, vectorizer__ngram_range=(1, 2);, score=0.299 total time=   8.5s\n",
-      "[CV 2/2; 12/24] START classifier__C=1, vectorizer__max_df=0.5, vectorizer__min_df=5, vectorizer__ngram_range=(1, 2)\n",
-      "[CV 1/2; 9/24] END classifier__C=1, vectorizer__max_df=0.5, vectorizer__min_df=0, vectorizer__ngram_range=(1, 1);, score=0.608 total time=   6.5s\n",
-      "[CV 2/2; 9/24] END classifier__C=1, vectorizer__max_df=0.5, vectorizer__min_df=0, vectorizer__ngram_range=(1, 1);, score=0.608 total time=   6.3s\n",
-      "[CV 1/2; 13/24] START classifier__C=1, vectorizer__max_df=1.0, vectorizer__min_df=0, vectorizer__ngram_range=(1, 1)\n",
-      "[CV 2/2; 13/24] START classifier__C=1, vectorizer__max_df=1.0, vectorizer__min_df=0, vectorizer__ngram_range=(1, 1)\n",
-      "[CV 1/2; 11/24] END classifier__C=1, vectorizer__max_df=0.5, vectorizer__min_df=5, vectorizer__ngram_range=(1, 1);, score=0.611 total time=   5.3s\n",
-      "[CV 1/2; 14/24] START classifier__C=1, vectorizer__max_df=1.0, vectorizer__min_df=0, vectorizer__ngram_range=(1, 2)\n",
-      "[CV 2/2; 11/24] END classifier__C=1, vectorizer__max_df=0.5, vectorizer__min_df=5, vectorizer__ngram_range=(1, 1);, score=0.611 total time=   5.4s\n",
-      "[CV 2/2; 14/24] START classifier__C=1, vectorizer__max_df=1.0, vectorizer__min_df=0, vectorizer__ngram_range=(1, 2)\n",
-      "[CV 2/2; 13/24] END classifier__C=1, vectorizer__max_df=1.0, vectorizer__min_df=0, vectorizer__ngram_range=(1, 1);, score=0.628 total time=   8.0s\n",
-      "[CV 1/2; 13/24] END classifier__C=1, vectorizer__max_df=1.0, vectorizer__min_df=0, vectorizer__ngram_range=(1, 1);, score=0.626 total time=   8.1s\n",
-      "[CV 1/2; 15/24] START classifier__C=1, vectorizer__max_df=1.0, vectorizer__min_df=5, vectorizer__ngram_range=(1, 1)\n",
-      "[CV 2/2; 15/24] START classifier__C=1, vectorizer__max_df=1.0, vectorizer__min_df=5, vectorizer__ngram_range=(1, 1)\n",
-      "[CV 1/2; 12/24] END classifier__C=1, vectorizer__max_df=0.5, vectorizer__min_df=5, vectorizer__ngram_range=(1, 2);, score=0.604 total time=  10.2s\n",
-      "[CV 1/2; 16/24] START classifier__C=1, vectorizer__max_df=1.0, vectorizer__min_df=5, vectorizer__ngram_range=(1, 2)\n",
-      "[CV 2/2; 12/24] END classifier__C=1, vectorizer__max_df=0.5, vectorizer__min_df=5, vectorizer__ngram_range=(1, 2);, score=0.607 total time=  10.2s\n",
-      "[CV 2/2; 16/24] START classifier__C=1, vectorizer__max_df=1.0, vectorizer__min_df=5, vectorizer__ngram_range=(1, 2)\n",
-      "[CV 1/2; 10/24] END classifier__C=1, vectorizer__max_df=0.5, vectorizer__min_df=0, vectorizer__ngram_range=(1, 2);, score=0.582 total time=  17.6s\n",
-      "[CV 2/2; 10/24] END classifier__C=1, vectorizer__max_df=0.5, vectorizer__min_df=0, vectorizer__ngram_range=(1, 2);, score=0.587 total time=  17.5s\n",
-      "[CV 1/2; 17/24] START classifier__C=100, vectorizer__max_df=0.5, vectorizer__min_df=0, vectorizer__ngram_range=(1, 1)\n",
-      "[CV 2/2; 17/24] START classifier__C=100, vectorizer__max_df=0.5, vectorizer__min_df=0, vectorizer__ngram_range=(1, 1)\n",
-      "[CV 2/2; 15/24] END classifier__C=1, vectorizer__max_df=1.0, vectorizer__min_df=5, vectorizer__ngram_range=(1, 1);, score=0.618 total time=   6.0s\n",
-      "[CV 1/2; 15/24] END classifier__C=1, vectorizer__max_df=1.0, vectorizer__min_df=5, vectorizer__ngram_range=(1, 1);, score=0.618 total time=   6.2s\n",
-      "[CV 1/2; 18/24] START classifier__C=100, vectorizer__max_df=0.5, vectorizer__min_df=0, vectorizer__ngram_range=(1, 2)\n",
-      "[CV 2/2; 18/24] START classifier__C=100, vectorizer__max_df=0.5, vectorizer__min_df=0, vectorizer__ngram_range=(1, 2)\n",
-      "[CV 1/2; 16/24] END classifier__C=1, vectorizer__max_df=1.0, vectorizer__min_df=5, vectorizer__ngram_range=(1, 2);, score=0.611 total time=  11.9s\n",
-      "[CV 1/2; 19/24] START classifier__C=100, vectorizer__max_df=0.5, vectorizer__min_df=5, vectorizer__ngram_range=(1, 1)\n",
-      "[CV 2/2; 16/24] END classifier__C=1, vectorizer__max_df=1.0, vectorizer__min_df=5, vectorizer__ngram_range=(1, 2);, score=0.613 total time=  12.1s\n",
-      "[CV 2/2; 19/24] START classifier__C=100, vectorizer__max_df=0.5, vectorizer__min_df=5, vectorizer__ngram_range=(1, 1)\n",
-      "[CV 1/2; 14/24] END classifier__C=1, vectorizer__max_df=1.0, vectorizer__min_df=0, vectorizer__ngram_range=(1, 2);, score=0.614 total time=  19.5s\n",
-      "[CV 2/2; 14/24] END classifier__C=1, vectorizer__max_df=1.0, vectorizer__min_df=0, vectorizer__ngram_range=(1, 2);, score=0.619 total time=  19.3s\n",
-      "[CV 1/2; 20/24] START classifier__C=100, vectorizer__max_df=0.5, vectorizer__min_df=5, vectorizer__ngram_range=(1, 2)\n",
-      "[CV 2/2; 20/24] START classifier__C=100, vectorizer__max_df=0.5, vectorizer__min_df=5, vectorizer__ngram_range=(1, 2)\n",
-      "[CV 1/2; 17/24] END classifier__C=100, vectorizer__max_df=0.5, vectorizer__min_df=0, vectorizer__ngram_range=(1, 1);, score=0.631 total time=  18.1s\n",
-      "[CV 1/2; 21/24] START classifier__C=100, vectorizer__max_df=1.0, vectorizer__min_df=0, vectorizer__ngram_range=(1, 1)\n",
-      "[CV 2/2; 17/24] END classifier__C=100, vectorizer__max_df=0.5, vectorizer__min_df=0, vectorizer__ngram_range=(1, 1);, score=0.638 total time=  19.6s\n",
-      "[CV 2/2; 21/24] START classifier__C=100, vectorizer__max_df=1.0, vectorizer__min_df=0, vectorizer__ngram_range=(1, 1)\n",
-      "[CV 1/2; 19/24] END classifier__C=100, vectorizer__max_df=0.5, vectorizer__min_df=5, vectorizer__ngram_range=(1, 1);, score=0.604 total time=  14.6s\n",
-      "[CV 1/2; 22/24] START classifier__C=100, vectorizer__max_df=1.0, vectorizer__min_df=0, vectorizer__ngram_range=(1, 2)\n",
-      "[CV 2/2; 19/24] END classifier__C=100, vectorizer__max_df=0.5, vectorizer__min_df=5, vectorizer__ngram_range=(1, 1);, score=0.610 total time=  15.7s\n",
-      "[CV 2/2; 22/24] START classifier__C=100, vectorizer__max_df=1.0, vectorizer__min_df=0, vectorizer__ngram_range=(1, 2)\n",
-      "[CV 1/2; 20/24] END classifier__C=100, vectorizer__max_df=0.5, vectorizer__min_df=5, vectorizer__ngram_range=(1, 2);, score=0.607 total time=  24.2s\n",
-      "[CV 1/2; 23/24] START classifier__C=100, vectorizer__max_df=1.0, vectorizer__min_df=5, vectorizer__ngram_range=(1, 1)\n",
-      "[CV 2/2; 20/24] END classifier__C=100, vectorizer__max_df=0.5, vectorizer__min_df=5, vectorizer__ngram_range=(1, 2);, score=0.611 total time=  24.6s\n",
-      "[CV 2/2; 23/24] START classifier__C=100, vectorizer__max_df=1.0, vectorizer__min_df=5, vectorizer__ngram_range=(1, 1)\n",
-      "[CV 1/2; 21/24] END classifier__C=100, vectorizer__max_df=1.0, vectorizer__min_df=0, vectorizer__ngram_range=(1, 1);, score=0.637 total time=  24.0s\n",
-      "[CV 1/2; 24/24] START classifier__C=100, vectorizer__max_df=1.0, vectorizer__min_df=5, vectorizer__ngram_range=(1, 2)\n",
-      "[CV 2/2; 21/24] END classifier__C=100, vectorizer__max_df=1.0, vectorizer__min_df=0, vectorizer__ngram_range=(1, 1);, score=0.648 total time=  23.5s\n",
-      "[CV 2/2; 24/24] START classifier__C=100, vectorizer__max_df=1.0, vectorizer__min_df=5, vectorizer__ngram_range=(1, 2)\n",
-      "[CV 1/2; 18/24] END classifier__C=100, vectorizer__max_df=0.5, vectorizer__min_df=0, vectorizer__ngram_range=(1, 2);, score=0.636 total time=  47.8s\n",
-      "[CV 1/2; 23/24] END classifier__C=100, vectorizer__max_df=1.0, vectorizer__min_df=5, vectorizer__ngram_range=(1, 1);, score=0.608 total time=  17.1s\n",
-      "[CV 2/2; 23/24] END classifier__C=100, vectorizer__max_df=1.0, vectorizer__min_df=5, vectorizer__ngram_range=(1, 1);, score=0.613 total time=  17.5s\n",
-      "[CV 2/2; 18/24] END classifier__C=100, vectorizer__max_df=0.5, vectorizer__min_df=0, vectorizer__ngram_range=(1, 2);, score=0.645 total time=  52.2s\n",
-      "[CV 1/2; 24/24] END classifier__C=100, vectorizer__max_df=1.0, vectorizer__min_df=5, vectorizer__ngram_range=(1, 2);, score=0.610 total time=  22.2s\n",
-      "[CV 2/2; 24/24] END classifier__C=100, vectorizer__max_df=1.0, vectorizer__min_df=5, vectorizer__ngram_range=(1, 2);, score=0.615 total time=  22.4s\n",
-      "[CV 1/2; 22/24] END classifier__C=100, vectorizer__max_df=1.0, vectorizer__min_df=0, vectorizer__ngram_range=(1, 2);, score=0.650 total time=  42.5s\n",
-      "[CV 2/2; 22/24] END classifier__C=100, vectorizer__max_df=1.0, vectorizer__min_df=0, vectorizer__ngram_range=(1, 2);, score=0.661 total time=  41.1s\n"
+      "Fitting 3 folds for each of 2 candidates, totalling 6 fits\n",
+      "[CV 2/3; 1/2] START vectorizer__ngram_range=(1, 1)..............................\n",
+      "[CV 1/3; 1/2] START vectorizer__ngram_range=(1, 1)..............................\n",
+      "[CV 3/3; 1/2] START vectorizer__ngram_range=(1, 1)..............................\n",
+      "[CV 1/3; 2/2] START vectorizer__ngram_range=(1, 2)..............................\n",
+      "[CV 2/3; 2/2] START vectorizer__ngram_range=(1, 2)..............................\n",
+      "[CV 3/3; 2/2] START vectorizer__ngram_range=(1, 2)..............................\n",
+      "[CV 2/3; 1/2] END vectorizer__ngram_range=(1, 1);, score=0.802 total time=   6.7s\n",
+      "[CV 3/3; 1/2] END vectorizer__ngram_range=(1, 1);, score=0.802 total time=   6.7s\n",
+      "[CV 1/3; 1/2] END vectorizer__ngram_range=(1, 1);, score=0.801 total time=   6.8s\n",
+      "[CV 2/3; 2/2] END vectorizer__ngram_range=(1, 2);, score=0.796 total time=  15.1s\n",
+      "[CV 1/3; 2/2] END vectorizer__ngram_range=(1, 2);, score=0.795 total time=  15.4s\n",
+      "[CV 3/3; 2/2] END vectorizer__ngram_range=(1, 2);, score=0.797 total time=  15.2s\n",
+      "Using these hyperparameters {'vectorizer__ngram_range': (1, 1)}, we get the best performance:\n"
      ]
     }
    ],
@@ -282,25 +241,51 @@
     "\n",
     "search = GridSearchCV(estimator=pipeline,\n",
     "                      param_grid=grid,\n",
-    "                      scoring=f1, \n",
+    "                      #scoring='accuracy', \n",
+    "                      scoring=f1,     # note that this is *not* the string 'f1', but the scorer object we constructed above\n",
     "                      cv=3,\n",
     "                      n_jobs=-1,  # use all cpus\n",
     "                      verbose=10)\n",
     "                      \n",
     "search.fit(X_train, y_train)\n",
-    "\n",
-    "print(f'Using these hyperparameters {search.best_params_}, we get the best performance:')\n"
+    "print(f'Using these hyperparameters {search.best_params_}, we get the best performance.')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "321fccad",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "     abusive       0.88      0.90      0.89      5369\n",
+      "     hateful       0.72      0.21      0.32       966\n",
+      "      normal       0.81      0.92      0.86     10848\n",
+      "        spam       0.63      0.45      0.52      2817\n",
+      "\n",
+      "    accuracy                           0.81     20000\n",
+      "   macro avg       0.76      0.62      0.65     20000\n",
+      "weighted avg       0.80      0.81      0.79     20000\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(classification_report(y_test, search.predict(X_test)))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "321fccad",
+   "id": "9a3b031e",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "print(classification_report(X_test, search.predict(y_test)))"
-   ]
+   "source": []
   }
  ],
  "metadata": {
