minor explanation fix

--- a/fall-2022/day5/multiprocessing.ipynb
+++ b/fall-2022/day5/multiprocessing.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,9 +44,8 @@
     "\n",
     "def f(x):\n",
     "    return x*x\n",
-    "\n",
-    "if __name__ == '__main__':        # in our course, we didn't discuss the if __name__=='__main__' construct yet. It's not imporant here, you could leave it away.\n",
-    "    with Pool(5) as p:\n",
+    "p = Pool(5)\n",
+    "if __name__ == '__main__':        # in our course, we didn't discuss the if __name__=='__main__' construct yet\n",
     "        print(p.map(f, [1, 2, 3]))"
    ]
   },
@@ -60,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -85,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -108,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -117,7 +116,7 @@
        "True"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
