scikit-learn versie update

--- a/fall-2023/day1/exercises-vectorizers/Understanding_vectorizers.ipynb
+++ b/fall-2023/day1/exercises-vectorizers/Understanding_vectorizers.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "6e4aa57f",
+   "id": "3903bc69",
    "metadata": {},
    "source": [
     "# Understanding vectorizers\n",
@@ -14,8 +14,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "29eb18e1",
+   "execution_count": 1,
+   "id": "d6288fa8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c0372eb2",
+   "id": "9efbfbd6",
    "metadata": {},
    "source": [
     "## Example 1: Inspect the output of a vectorizer in a dense format\n",
@@ -39,8 +39,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "5fe0a32d",
+   "execution_count": 2,
+   "id": "49495cfd",
    "metadata": {},
    "outputs": [
     {
@@ -60,13 +60,13 @@
     "vect = CountVectorizer()# initialize the vectorizer\n",
     "\n",
     "X = vect.fit_transform(texts) #fit the vectorizer and transform the documents in one go\n",
-    "print(pd.DataFrame(X.A, columns=vect.get_feature_names()).to_string())\n",
-    "df = pd.DataFrame(X.toarray().transpose(), index = vect.get_feature_names())"
+    "print(pd.DataFrame(X.A, columns=vect.get_feature_names_out()).to_string())\n",
+    "df = pd.DataFrame(X.toarray().transpose(), index = vect.get_feature_names_out())"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "c8c0c0c5",
+   "id": "72b8d55e",
    "metadata": {},
    "source": [
     "## Example 2: Inspect the output of a vectorizer in a sparse format\n",
@@ -76,8 +76,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "ea857d91",
+   "execution_count": 3,
+   "id": "88bfaeba",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "03354120",
+   "id": "e95a380b",
    "metadata": {},
    "source": [
     "    1.Inspect the shape of transformed texts. We can see that we have a 4x8 sparse matrix, meaning that we have 4 \n",
@@ -97,8 +97,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "fe603bd7",
+   "execution_count": 4,
+   "id": "d9363fb0",
    "metadata": {},
    "outputs": [
     {
@@ -108,7 +108,7 @@
        "\twith 9 stored elements in Compressed Sparse Row format>"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -119,7 +119,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "52cd6f01",
+   "id": "64e134c2",
    "metadata": {},
    "source": [
     "    2.Get the feature names. This will return the tokens that are in the vocabulary of the vectorizer"
@@ -127,28 +127,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "1a925f76",
+   "execution_count": 5,
+   "id": "b9c92ac2",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['are', 'everybody', 'hello', 'how', 'students', 'today', 'what', 'you']"
+       "array(['are', 'everybody', 'hello', 'how', 'students', 'today', 'what',\n",
+       "       'you'], dtype=object)"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "count_vec.get_feature_names()"
+    "count_vec.get_feature_names_out()"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "cfb2c6f3",
+   "id": "14c6b9a0",
    "metadata": {},
    "source": [
     "    3. Represent the token's mapping to it's id values. The numbers do *not* represent the count of the words but the position of the words in the matrix"
@@ -156,8 +157,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "0937869d",
+   "execution_count": 6,
+   "id": "0cf16fdc",
    "metadata": {},
    "outputs": [
     {
@@ -173,7 +174,7 @@
        " 'everybody': 1}"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -184,7 +185,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4b768f3b",
+   "id": "d4f3fb63",
    "metadata": {},
    "source": [
     "    4. Get sparse representation on document level"
@@ -192,8 +193,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "62d39871",
+   "execution_count": 7,
+   "id": "1a70295b",
    "metadata": {},
    "outputs": [
     {
@@ -229,7 +230,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "28f4a49e",
+   "id": "52645b99",
    "metadata": {},
    "source": [
     "a. Do you understand the output printed above?  \n",
@@ -239,7 +240,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -253,7 +254,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.2"
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
