--- a/fall-2024_exercises/day2/regex_examples.ipynb
+++ b/fall-2024_exercises/day2/regex_examples.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "5830422c",
    "metadata": {},
    "outputs": [],
@@ -25,21 +25,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": null,
    "id": "ac3fad21",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'** ** you hello'"
-      ]
-     },
-     "execution_count": 63,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "pattern = r\"[A-Z]+\"\n",
     "example_string = \"HOW ARE you hello\"\n",
@@ -50,21 +39,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": null,
    "id": "444084cc",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[' ', ' ', ' ', ' ', ' ', ' ', ' ', ' ', '!!']"
-      ]
-     },
-     "execution_count": 72,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "#pattern= r\"[^a-zA-Z]+\" #other empty strings represent the sequences of characters that are not alphabetic characters but are separated by spaces\n",
     "#pattern = r\"\\d+\"\n",
@@ -76,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "b59362d5",
    "metadata": {},
    "outputs": [],
@@ -86,23 +64,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": null,
    "id": "dd55b547",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['RT @TimSenders']"
-      ]
-     },
-     "execution_count": 78,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "pattern = 'RT ?:? @[a-zA-Z]*'\n",
+    "#pattern = 'RT ?:? @[a-zA-Z0-9]*'\n",
+    "#pattern = r'RT ?:? @\\w*'\n",
     "example_string = 'iewjogejiwojg RT @TimSenders395 iegwjo'\n",
     "\n",
     "re.findall(pattern, example_string)"
@@ -110,21 +79,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": null,
    "id": "0ad26e5f",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['ABN', 'amro', 'ABNAMRO', 'abn amro']"
-      ]
-     },
-     "execution_count": 88,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "test_string = 'ABN and also amro. ABNAMRO and abn amro'\n",
     "pattern = r'\\b(ABN\\s+AMRO|ABNAMRO|ABN|AMRO)\\b'\n",
@@ -134,21 +92,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": null,
    "id": "d22dcd64",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'A DUTCH BANK and also A DUTCH BANK. A DUTCH BANK and A DUTCH BANK'"
-      ]
-     },
-     "execution_count": 80,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "replacement_string = 'A DUTCH BANK'\n",
     "re.sub(pattern, replacement_string, test_string, flags=re.IGNORECASE)"
@@ -182,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "5e04500f",
    "metadata": {},
    "outputs": [],
@@ -196,18 +143,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "id": "d40df1dd",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<re.Match object; span=(102, 105), match='FBI'>\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# first show the principle:\n",
     "for r in re.finditer(r\"[A-Z][A-Z]+\", texts[0]):   # words with two or more capital letters\n",
@@ -216,37 +155,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "id": "f6b58a3e",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Now processing text number 0...\n",
-      "ach the head of the FBI and Deputy Attorney\n",
-      "\n",
-      "**********************************\n",
-      "\n",
-      "Now processing text number 1...\n",
-      "\n",
-      "**********************************\n",
-      "\n",
-      "Now processing text number 2...\n",
-      " more valuable than VISA or AMERICAN EXPRESS\n",
-      "luable than VISA or AMERICAN EXPRESS called the \n",
-      "an VISA or AMERICAN EXPRESS called the black ca\n",
-      "\n",
-      "**********************************\n",
-      "\n",
-      "Now processing text number 3...\n",
-      "\n",
-      "**********************************\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# let's exploit the fact that span() gives us first and last index (=position) within\n",
     "# the string\n",
@@ -257,6 +169,14 @@
     "        print(text[r.span()[0]-20:r.span()[1]+20])\n",
     "    print('\\n**********************************\\n')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "14846b4d",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -275,7 +195,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.10.14"
   }
  },
  "nbformat": 4,
