--- a/fall-2024_exercises/day4/exercises/exercise-morning/exercise-morning.ipynb
+++ b/fall-2024_exercises/day4/exercises/exercise-morning/exercise-morning.ipynb
@@ -14,7 +14,9 @@
     "### Option 2: practice with the data from [Vermeer](data-vermeer/)\n",
     "\n",
     "* Work with the file `train.csv` and `test.csv` in the folder [`data-vermeer`](data-vermeer/) and train a classifier using this data.\n",
-    "* If you feel lost, you can use the following notebook for inspiration: [`potential-solution-exercise-vermeer.ipynb`](potential-solution-exercise-vermeer.ipynb) "
+    "* If you feel lost, you can use the following notebook for inspiration: [`potential-solution-exercise-vermeer.ipynb`](potential-solution-exercise-vermeer.ipynb) \n",
+    "\n",
+    "### BONUS: Try it with your own data!"
    ]
   },
   {
