exercise updates D2 morning, D3 morning + afternoon

--- a/fall-2024_exercises/day3/excercise-morning/pca_svd_kmeans.ipynb
+++ b/fall-2024_exercises/day3/excercise-morning/pca_svd_kmeans.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Introduction into Unsupervised Machine Learning: dimensionality reduction and clustering techniques"
+    "#Examples: Dimensionality reduction and clustering techniques"
    ]
   },
   {
@@ -13,23 +13,32 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Data manipulation and analysis\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import csv\n",
+    "\n",
+    "# Machine learning and preprocessing\n",
     "from sklearn import datasets\n",
-    "from sklearn.decomposition import PCA\n",
-    "from sklearn.decomposition import TruncatedSVD\n",
+    "from sklearn.decomposition import PCA, TruncatedSVD\n",
     "from sklearn.feature_extraction.text import CountVectorizer\n",
     "from sklearn.pipeline import make_pipeline\n",
     "from sklearn.preprocessing import FunctionTransformer\n",
-    "import random\n",
-    "import csv\n",
-    "random.seed(555)\n",
-    "import matplotlib.pyplot as plt\n",
-    "import numpy as np\n",
-    "import pandas as pd\n",
     "\n",
+    "#visualization\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "#miscellaneous\n",
+    "import random\n",
+    "random.seed(555)\n",
+    "\n",
+    "\n",
+    "#load data\n",
     "autotexts = datasets.fetch_20newsgroups(categories=['rec.autos'], remove=('headers', 'footers', 'quotes'), subset='train')['data']\n",
     "religiontexts = datasets.fetch_20newsgroups(categories=['soc.religion.christian'], remove=('headers', 'footers', 'quotes'), subset='train')['data']\n",
-    "\n",
     "texts = autotexts[:20] + religiontexts[:20]\n",
+    "\n",
+    "#shuffle data\n",
     "random.shuffle(texts)"
    ]
   },
